load("@rules_cc//cc:defs.bzl", "cc_binary")

# NOTE: cc_binary runs in a different location meaning these examples cannot
#       find the resources to run. Instead you must manually execute the built
#       executable.

cc_binary(
    name = "textures_background_scrolling",
    srcs = ["textures_background_scrolling.c"],
    deps = ["@raylib"],
)
cc_binary(
    name = "textures_blend_modes",
    srcs = ["textures_blend_modes.c"],
    deps = ["@raylib"],
)
cc_binary(
    name = "textures_bunnymark",
    srcs = ["textures_bunnymark.c"],
    deps = ["@raylib"],
)
cc_binary(
    name = "textures_draw_tiled",
    srcs = ["textures_draw_tiled.c"],
    deps = ["@raylib"],
)
cc_binary(
    name = "textures_fog_of_war",
    srcs = ["textures_fog_of_war.c"],
    deps = ["@raylib"],
)
cc_binary(
    name = "textures_gif_player",
    srcs = ["textures_gif_player.c"],
    deps = ["@raylib"],
)
cc_binary(
    name = "textures_image_drawing",
    srcs = ["textures_image_drawing.c"],
    deps = ["@raylib"],
)
cc_binary(
    name = "textures_image_generation",
    srcs = ["textures_image_generation.c"],
    deps = ["@raylib"],
)
cc_binary(
    name = "textures_image_loading",
    srcs = ["textures_image_loading.c"],
    deps = ["@raylib"],
)
cc_binary(
    name = "textures_image_processing",
    srcs = ["textures_image_processing.c"],
    deps = ["@raylib"],
)
cc_binary(
    name = "textures_image_rotate",
    srcs = ["textures_image_rotate.c"],
    deps = ["@raylib"],
)
cc_binary(
    name = "textures_image_text",
    srcs = ["textures_image_text.c"],
    deps = ["@raylib"],
)
cc_binary(
    name = "textures_logo_raylib",
    srcs = ["textures_logo_raylib.c"],
    deps = ["@raylib"],
)
cc_binary(
    name = "textures_mouse_painting",
    srcs = ["textures_mouse_painting.c"],
    deps = ["@raylib"],
)
cc_binary(
    name = "textures_npatch_drawing",
    srcs = ["textures_npatch_drawing.c"],
    deps = ["@raylib"],
)
cc_binary(
    name = "textures_particles_blending",
    srcs = ["textures_particles_blending.c"],
    deps = ["@raylib"],
)
cc_binary(
    name = "textures_polygon",
    srcs = ["textures_polygon.c"],
    deps = ["@raylib"],
)
cc_binary(
    name = "textures_raw_data",
    srcs = ["textures_raw_data.c"],
    deps = ["@raylib"],
)
cc_binary(
    name = "textures_sprite_anim",
    srcs = ["textures_sprite_anim.c"],
    deps = ["@raylib"],
)
cc_binary(
    name = "textures_sprite_button",
    srcs = ["textures_sprite_button.c"],
    deps = ["@raylib"],
)
cc_binary(
    name = "textures_sprite_explosion",
    srcs = ["textures_sprite_explosion.c"],
    deps = ["@raylib"],
)
cc_binary(
    name = "textures_srcrec_dstrec",
    srcs = ["textures_srcrec_dstrec.c"],
    deps = ["@raylib"],
)
cc_binary(
    name = "textures_svg_loading",
    srcs = ["textures_svg_loading.c"],
    deps = ["@raylib"],
)
cc_binary(
    name = "textures_textured_curve",
    srcs = ["textures_textured_curve.c"],
    deps = ["@raylib"],
)
cc_binary(
    name = "textures_to_image",
    srcs = ["textures_to_image.c"],
    deps = ["@raylib"],
)
